[gd_scene load_steps=14 format=3 uid="uid://c4ktyer38vnk4"]

[ext_resource type="Script" uid="uid://c6ewm0kfmomky" path="res://Characters/Enemies/Monster/Monster.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cryka57a5ond" path="res://Resources/2D Pixel Dungeon Asset Pack/character and tileset/Dungeon_Character.png" id="2_ih4cu"]
[ext_resource type="FontFile" uid="uid://wige0wqmw7c7" path="res://Resources/fonts/Early GameBoy.ttf" id="3_801wt"]
[ext_resource type="Script" uid="uid://j7f61gjvewa4" path="res://StateMachine/StateMachine.gd" id="4_8alai"]
[ext_resource type="Script" uid="uid://clhbpsx44c74e" path="res://Characters/Enemies/Monster/MonsterStates/MonsterChaseState.gd" id="5_3nu2b"]
[ext_resource type="Script" uid="uid://uwxbbnvsmads" path="res://Characters/Enemies/Monster/MonsterStates/MonsterIdleState.gd" id="6_y0a0h"]
[ext_resource type="Script" uid="uid://ce7eenuitvc55" path="res://Characters/Enemies/Monster/MonsterStates/MonsterStunnedState.gd" id="7_r742e"]
[ext_resource type="Script" uid="uid://bjwncp7taw2hb" path="res://Characters/Enemies/Monster/MonsterStates/MonsterAttackingState.gd" id="8_fcqrr"]

[sub_resource type="SpriteFrames" id="SpriteFrames_fpaif"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_8mwhe"]
atlas = ExtResource("2_ih4cu")
region = Rect2(50, 48, 12, 15)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wbc43"]
radius = 7.0
height = 18.0

[sub_resource type="CircleShape2D" id="2"]
radius = 75.0

[sub_resource type="LabelSettings" id="LabelSettings_5y84s"]
font = ExtResource("3_801wt")
font_size = 9
font_color = Color(1, 0, 1, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 0.478431)

[node name="Monster" type="CharacterBody2D"]
z_index = 9
z_as_relative = false
collision_layer = 10
collision_mask = 45
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fpaif")
animation = &"new_animation"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = SubResource("AtlasTexture_8mwhe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_wbc43")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_max_distance = 50.0
navigation_layers = 2
simplify_path = true

[node name="AggroRange" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroRange"]
shape = SubResource("2")

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DamageArea"]
position = Vector2(1, 0)
polygon = PackedVector2Array(12, 0, 11, -7, 7, -13, 17, -16, 21, -8, 22, 0, 21, 8, 17, 16, 7, 13, 11, 7)

[node name="Indicator" type="Polygon2D" parent="DamageArea"]
visible = false
color = Color(1, 0, 0, 0.509804)
polygon = PackedVector2Array(6, -14, 19, -18, 24, -8, 25, 0, 24, 8, 19, 18, 6, 14, 10, 7, 11, 0, 10, -7)

[node name="PathTimer" type="Timer" parent="."]
wait_time = 0.4

[node name="StatusLabel" type="Label" parent="."]
visible = false
texture_filter = 1
offset_left = -18.0
offset_top = -14.0
offset_right = 18.0
offset_bottom = 1.0
text = "STUN"
label_settings = SubResource("LabelSettings_5y84s")

[node name="SubViewport" type="SubViewport" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="SubViewport"]
offset_right = 40.0
offset_bottom = 40.0

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_8alai")
initial_state = NodePath("Idle")

[node name="Chase" type="Node" parent="StateMachine" node_paths=PackedStringArray("monster")]
script = ExtResource("5_3nu2b")
monster = NodePath("../..")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("monster")]
script = ExtResource("6_y0a0h")
monster = NodePath("../..")

[node name="Stunned" type="Node" parent="StateMachine" node_paths=PackedStringArray("monster")]
script = ExtResource("7_r742e")
monster = NodePath("../..")

[node name="Attacking" type="Node" parent="StateMachine" node_paths=PackedStringArray("monster")]
script = ExtResource("8_fcqrr")
monster = NodePath("../..")

[connection signal="body_entered" from="AggroRange" to="." method="_on_AggroRange_body_entered"]
[connection signal="timeout" from="PathTimer" to="." method="_on_path_timer_timeout"]
